--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.3.0
   flutter:
     sdk: flutter
+  provider: ^6.1.2
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
 
 dev_dependencies:
   flutter_test:
